--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # VITE VAR MUST START WITH 'VITE_' PREFIX
 VITE_API_URL="https://api.coingecko.com/api/v3/coins/markets?vs_currency=brl"
+VITE_COIN_API_URL="https://api.coingecko.com/api/v3/coins"
